# travel_weather_openapi_client

./: README.md  requirements.txt  setup.cfg
config/: config-template.ini
src/openapi/: TravelWeather.py
