[metadata]
name = travel_weather_openai_client
version = attr: src.openapi.__version__
description = Travel weather OpenAPI client
long_description = file: README.md
long_description_content_type = text/markdown
url = None
author = xyloon
author_email = xyloon@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: Shell Application

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
setup_requires =
    setuptools>=40.8.0
install_requires =
    requests>=2.20.1

[options.packages.find]
where = src
include = openapi.*

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require spawning Dockerized kernel sessions

